Revert "fix: changed background color for focused choice for greater contrast"
This reverts commit 00cab84958991b0f900406ffbf7ac4a64ed76a64.

--- a/src/theme/ItaliaTheme/Components/_search.scss
+++ b/src/theme/ItaliaTheme/Components/_search.scss
@@ -7,6 +7,5 @@
     border-color: var(--focus-outline-color) !important;
     box-shadow: 0 0 0 2px var(--focus-outline-color) !important;
     outline: none !important;
-    background-color: #0062e2;
   }
 }
